2002-12-06  Ulrich Drepper  <drepper@redhat.com>

	* test-skeleton.c (timeout_handler): Allow expected signal to be
	SIGALRM.

	* wctype/wcfuncs.c: Add libc_hidden_def for iswalnum.

	* sysdeps/posix/raise.c: Add libc_hidden_def for raise.

2002-12-07  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/sparc64/sysdep.h [RTLD_PRIVATE_ERRNO]
	(SYSCALL_ERROR_HANDLER): Fix a pasto.
	Reported by Jeff Bailey <jbailey@nisa.net>.

2002-12-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/libc-tls.c: Undo last patch.

	* include/wctype.h: Define iswalnum with libc_hidden_proto.

	* include/signal.h: Define raise with libc_hidden_proto.

	* sysdeps/unix/sysv/linux/fexecve.c (fexecve): Use __snprintf and
	__execve instead of snprintf and execve.

	* sysdeps/x86_64/fpu/libm-test-ulps: Relax errors for float and double
	again a bit.

2002-12-06  Jakub Jelinek  <jakub@redhat.com>

	* posix/Makefile (annexc.out): Add -I../dir for all sorted-dirs.
	* posix/annexc.c (fmt, testfmt): Remove -D_LIBC.

2002-12-06  Ulrich Drepper  <drepper@redhat.com>

	* misc/syslog.c (log_cleanup): New function.
	(openlog): Use log_cleanup instead of __libc_mutex_unlock.
	(closelog): Likewise.

	* elf/dl-close.c: Use __rtld_lock_* macros instead of __libc_lock_*.
	* elf/dl-iteratephdr.c: Likewise.
	* elf/dl-lookup.c: Likewise.
	* elf/dl-misc.c: Likewise.
	* elf/dl-open.c: Likewise.
	* elf/dl-support.c: Likewise.
	* elf/rtld.c: Likewise.
	* sysdeps/generic/ldsodefs.h: Likewise.
	* sysdeps/generic/bits/libc-lock.h: Define __rtld_lock_* macros.
	* sysdeps/mach/bits/libc-lock.h: Likewise.
	* sysdeps/mach/hurd/bits/libc-lock.h: Likewise.

2002-12-06  Roland McGrath  <roland@redhat.com>

	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Cope with zero ALIGN.

	* malloc/hooks.c [_LIBC && (USE___THREAD || (USE_TLS && !SHARED))]
	(malloc_starter, memalign_starter, free_starter): Don't define these.
	* malloc/malloc.c [_LIBC && (USE___THREAD || (USE_TLS && !SHARED))]: